# ww

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README-CN.md  README.md  crontab-backup.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: integration_test.yml  lint.yml  release.yml  unit_test.yml
completions/: _ww
integration_tests/: helpers.py  test_base64.py  test_ccr.py  test_clean_zip.py  test_create_note.py  test_decode_jwt.py  test_find_large_dirs.py  test_fix_mathjax.py  test_fix_table.py  test_gif.py  test_git_filename.py  test_git_show.py  test_image_compress.py  test_main.py  test_placeholder.py  test_py2txt.py  test_smart_unzip.py  test_unzip.py  test_ww_cli.py
notes/: 2026-03-19-cli-beats-browser-github-en.md  2026-04-05-nvda-stock-check.md
tests/: conftest.py  test_env.py  test_main.py  test_main_extended.py  test_ww_units.py
tests/actions/: test_check.py
tests/agent/: test_agents.py  test_code_validation_utils.py  test_git_grammar_agent.py  test_git_utils.py  test_more_agents.py  test_table_agent.py  test_toc_agent.py  test_validate_utils.py
tests/audio/: test_audio_pipeline.py  test_conversation_json.py  test_whisper_organize.py
tests/auto_ss_config/: test_aliyun.py  test_hetzner.py  test_lightsail.py  test_upload_configs.py
tests/bot/: test_punch_bot.py
tests/clash/: test_speed.py  test_speed_plus.py
tests/cloud/: test_ec2.py
tests/content/: test_fix_mathjax.py  test_fix_table.py
tests/crawler/: test_weibo.py
tests/create/: test_check_duplicate_notes.py  test_create_note_utils.py
tests/encoding/: test_check_encoding.py  test_convert_encoding.py  test_convert_encoding_extended.py
tests/gif/: test_gif.py
tests/git/: test_git_amend_push.py  test_git_classify_commit.py  test_git_commit.py  test_git_delete_commit.py  test_git_diff_tree.py  test_git_filename.py  test_git_force_push.py  test_git_show_command.py  test_git_squash.py  test_git_update.py
tests/github/: test_github_mgmt.py  test_gitmessageai.py  test_gitmessageai_extended.py  test_readme.py
tests/hf/: test_hf.py
tests/image/: test_exif.py  test_image_compress.py  test_remove_bg.py  test_remove_bg_extended.py  test_screenshot.py  test_whatsapp.py
tests/java/: test_analyze_packages.py  test_clean_log.py
tests/linux/: test_gpu.py  test_switch_keys.py  test_system.py
tests/llm/: test_compare.py  test_copilot_auth.py  test_copilot_client.py  test_openrouter_client.py  test_openrouter_mgmt.py
tests/machine/: test_machine_info.py
tests/macos/: test_charge_watcher.py  test_find_largest_directories.py  test_get_system_info.py  test_install.py  test_open_terminal.py
tests/md/: test_md2jpg.py
tests/ml/: test_w2v_utils.py  test_word_vectors.py
tests/network/: test_generate_password.py  test_get_wifi_list_util.py  test_ip_scan.py  test_port_scan.py  test_wifi_util.py
tests/note/: test_check_duplicate_notes.py  test_check_duplicate_notes_extended.py  test_create_log.py  test_create_log_extended.py  test_create_note_from_clipboard.py  test_create_note_utils.py  test_create_note_utils_extended.py  test_note_queue.py  test_note_workflow.py  test_obfuscate_log.py  test_screenshot_log.py
tests/pdf/: test_md2png.py  test_pdf_base.py  test_pdf_pipeline.py  test_scale_pdf.py  test_update_pdf.py
tests/plugins/: test_note_plugin.py
tests/proc/: test_kill_by_pattern.py  test_kill_by_port.py  test_kill_jekyll.py  test_kill_unix.py
tests/search/: test_common.py  test_search_modules.py  test_search_web.py
tests/social/: test_x_bulk_unfollow.py  test_x_post.py
tests/sync/: test_claude.py  test_remote.py
tests/utils/: test_base64utils.py  test_ccr.py  test_clean_zip.py  test_decode_jwt.py  test_py2txt.py  test_request_with_proxy.py  test_smart_unzip.py  test_unzip.py
tests/zed/: test_zed_remote.py
ww/: db.py  db_stats.py  env.py  main.py
ww/action/: action.py
ww/actions/: check.py
ww/agent/: add_prompt.py  agent.py  code_agent.py  code_validation_utils.py  extract_transcript.py  fact_agnet.py  fix_agent.py  format_agent.py  git_grammar_agent.py  git_utils.py  grammar_agent.py  market_agent.py  merge_agent.py  naming_agent.py  optimize_agent.py  recursive_agent.py  refactor_agent.py  research_agent.py  session_manager_cli.py  share_agent.py  speech_to_text_agent.py  table_agent.py  title_agent.py  toc_agent.py  transcript_agent.py  validate_utils.py
ww/alarm/: alarm.py
ww/amd_dev_cloud/: __init__.py  delete_snapshot.py  end_train.py  snapshots.py  start_train.py
ww/ansible/: hello.yml
ww/audio/: audio_pipeline.py  azure_speech.py  conversation_json.py  conversation_pipeline.py  conversation_to_notes.py  headphone.py  speech_to_text_realtime.py  transcript.py  whisper_diarize.py  whisper_organize.py  whisper_refine.py  whisper_translate.py
ww/auto_ss_config/: .gitignore  AI.list  AI.yaml  aliyun_elastic_ip_manager.py  app_config_tmp.yaml  clash_config_tmp.yaml  hetzner.py  hysteria_config.yaml  lightsail.py  ss.conf  upload_configs.py
ww/benchmark/: gpu_bench.py
ww/bot/: habit_bot.py  punch_bot.py  telegram_bot.py
ww/canvas/: canvas_card.py
ww/ccr/: install_ccr.py
ww/clash/: clash.py  clash_select_provider.py  clash_speed.py  clash_utils.py  networksetup.py  query_dns.py  speed.py  speed_plus.py  wifi_toggle.py
ww/claude/: agent.md  bash.md  body.json  capture_server.py  captured_headers.json  captured_request.json  text.md  todo.md  try_pincc.py  web_fetch.md
ww/cloud/: ec2.py
ww/cloudflare/: get_monthly_visit.py  get_schema.py  get_web_analytics_datasets.py  get_zone_id.py  read_analytics_data_from_pdf.py
ww/config/: CLAUDE.md  claude_code_config.json  claude_code_settings.json  codex_config.toml  config  ghostty_config  init.el  librechat.env  librechat.yaml  macao.conf  on-agent-done.sh  openclaw.json  qbittorrent-nox.service  set_claude_code_config.py
ww/content/: fix_mathjax.py  fix_table.py
ww/conversation/: generate.py  image.py  json.py  notes.py  video.py
ww/conversation_upload/: video.py
ww/cook/: cook.py
(+440 files in other folders)
