[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ww"
version = "0.1.0"
description = "A cross-platform CLI toolkit for personal and enterprise automation, with LLM integration."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.0",
    "pyperclip>=1.8.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pypdf>=4.0.0",
    "pdf2image>=1.16.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "chardet>=5.0.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
ww = "ww.main:main"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingModuleSource = false
reportAttributeAccessIssue = false
exclude = [
    "ww/agent/",
    "ww/audio/",
    "ww/auto_ss_config/",
    "ww/bot/",
    "ww/clash/",
    "ww/conversation_upload/",
    "ww/crawler/",
    "ww/embedding/",
    "ww/gif/",
    "ww/graph/",
    "ww/japanese/",
    "ww/java/",
    "ww/kalman/",
    "ww/langchain_test/",
    "ww/mmlu/",
    "ww/networkx/",
    "ww/photo/",
    "ww/pico/",
    "ww/pl/",
    "ww/plot/",
    "ww/social/",
    "ww/supabase/",
    "ww/tooluse/",
    "ww/torch_llm/",
    "ww/try/",
    "ww/video/",
    "ww/wandbrun/",
    ".venv/",
]

[tool.ruff.lint]
ignore = [
    "E731",  # lambda assignments — used intentionally as prompt builders
    "E722",  # bare except — intentional in network/system code
    "F841",  # unused local variable
]

[tool.ruff.lint.per-file-ignores]
"ww/search/*.py" = ["E402"]  # warnings.filterwarnings must precede imports
"ww/mmlu/*.py" = ["E402"]
"ww/networkx/*.py" = ["E402"]
"ww/social/*.py" = ["E402"]
