[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ww"
version = "0.1.0"
description = "A cross-platform CLI toolkit for personal and enterprise automation, with LLM integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "pyperclip>=1.8.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreText>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-UserNotifications>=9.0; sys_platform == 'darwin'",
    "pypdf>=4.0.0",
    "pdf2image>=1.16.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "chardet>=5.0.0",
    "tavily-python>=0.5.0",
    "piexif>=1.1.0",
    "playwright>=1.40.0",
    "PyJWT>=2.0.0",
    "dnspython>=2.4.0",
    "speedtest-cli>=2.1.3",
    "pydub>=0.25.1",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "selenium>=4.15.0",
]

[project.scripts]
ww = "ww.main:main"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingModuleSource = false
reportAttributeAccessIssue = false
exclude = [
    ".venv/",
    "ww/ml/",
    "tests/",
    "ww/trading/",
    "ww/wandbrun/",
    "ww/agent/speech_to_text_agent.py",
    "ww/audio/speech_to_text.py",
    "ww/java/java_agent.py",
    "ww/arduino/",
    "ww/ansible/",
    "ww/pico/",
]

[tool.ruff]
extend-exclude = ["ww/ml"]

[tool.ruff.lint]
ignore = [
    "E731",  # lambda assignments — used intentionally as prompt builders
    "E722",  # bare except — intentional in network/system code
    "F841",  # unused local variable
]

[tool.ruff.lint.per-file-ignores]
"ww/search/*.py" = ["E402"]  # warnings.filterwarnings must precede imports
"ww/mmlu/*.py" = ["E402"]
"ww/networkx/*.py" = ["E402"]
"ww/social/*.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.bandit]
exclude_dirs = ["ww/ml", "tests"]
skips = [
    "B101",  # assert_used — intentional in tests and validation
    "B105",  # hardcoded_password_string — config defaults, not real secrets
    "B106",  # hardcoded_password_funcarg — config defaults
    "B107",  # hardcoded_password_default — config defaults
    "B108",  # hardcoded_tmp_directory — CLI temp file patterns
    "B110",  # try_except_pass — intentional silent error handling
    "B112",  # try_except_continue — intentional in loops
    "B113",  # request_without_timeout — some calls don't need timeout
    "B301",  # pickle — used for ML model serialization
    "B307",  # eval — used for dynamic expression evaluation
    "B310",  # urllib_urlopen — used for URL validation
    "B311",  # random — used for generating names, not security
    "B314",  # xml — used for parsing config files
    "B404",  # import_subprocess — CLI tool needs subprocess
    "B405",  # import_xml_etree — used for parsing
    "B602",  # subprocess_popen_with_shell_equals_true — intentional
    "B603",  # subprocess_without_shell_equals_true — intentional
    "B605",  # start_process_with_shell — intentional in CLI
    "B607",  # start_process_with_partial_path — intentional
    "B608",  # hardcoded_sql_expressions — false positives
    "B615",  # huggingface_unsafe_download — model downloads
]
